add static pages

--- a/views/pages/game_find.ejs
+++ b/views/pages/game_find.ejs
@@ -10,8 +10,11 @@
       <br>
     <div class="container justify-content-center text-center">
 
+      <div class="container justify-content-center text-center">
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/GZM5AEMrbn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="movie-wrap"><iframe  width="854" height="480" src="https://www.youtube.com/embed/GZM5AEMrbn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        
+      </div>
     </div>
     <div class ="container pad50">
       <p></p>
