--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -19,3 +19,17 @@ $tnemecolor_3: #FFD1DF;
 .pad50{
   padding: 50%;
 }
+.movie-wrap {
+  position: relative;
+  padding-bottom: 56.25%; /*アスペクト比 16:9の場合の縦幅*/
+  height: 0;
+  overflow: hidden;
+}
+
+.movie-wrap iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
