--- a/views/pages/game_jetSaber.ejs
+++ b/views/pages/game_jetSaber.ejs
@@ -10,8 +10,8 @@
       <br>
     <div class="container justify-content-center text-center">
 
-
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/zLQ5qq1oFO0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="movie-wrap"><iframe  width="854" height="480" src="https://www.youtube.com/embed/zLQ5qq1oFO0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+      
     </div>
     <div class ="container pad50">
       <p></p>
