--- a/views/pages/game_find.ejs
+++ b/views/pages/game_find.ejs
@@ -12,7 +12,7 @@
 
       <div class="container justify-content-center text-center">
 
-        <iframe  src="https://www.youtube.com/embed/GZM5AEMrbn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="movie-wrap"></div><iframe   width="426" height="240"  src="https://www.youtube.com/embed/GZM5AEMrbn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         
       </div>
     </div>
