--- a/views/pages/game.ejs
+++ b/views/pages/game.ejs
@@ -1,5 +1,5 @@
-<body class="container-fluid ">
-    <main class="text-center">
+<body class="container-fluid " >
+    <main class="text-center"  data-aos="fade-in">
         <h1>-Games-</h1>
     <div class="container pad5">
       
