--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,10 +1,9 @@
-<body class="container-fluid ">
+<body class="container-fluid " >
   <main class="text-center">
-<div class="pad5">
+<div class="pad5 transition-enabled" data-aos="fade-in" >
 
   <a href="/games/" class="text-dark"><h1>-Games-</h1></a> 
-  <div class="container pad5">
-        
+  <div class="container pad5 " >
     <div id="carouselExampleIndicators" class="carousel slide col-sm " data-bs-ride="carousel" interval="2000" mx-300>
       <ol class="carousel-indicators">
         <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
