--- a/views/pages/game_find.ejs
+++ b/views/pages/game_find.ejs
@@ -1,5 +1,5 @@
-  <body class="container-fluid ">
-    <main class=" mx-2 ">
+  <body class="container-fluid " >
+    <main class=" mx-2 " data-aos="fade-in">
         <div >
           <div class="p-3 p-sm-5 my-4 rounded theme2 text-center">
             <h1>Find</h1>
@@ -8,7 +8,7 @@
         
     </main>
       <br>
-    <div class="container justify-content-center text-center">
+    <div class="container justify-content-center text-center" data-aos="fade-in">
 
       <div class="container justify-content-center text-center">
 
@@ -16,7 +16,7 @@
         
       </div>
     </div>
-    <div class ="container pad50">
+    <div class ="container pad50" data-aos="fade-in">
       <p></p>
       <p></p>
       <p>二年生三回目のチーム制作で制作したパズルゲームです。</p>
