--- a/views/pages/game_jetSaber.ejs
+++ b/views/pages/game_jetSaber.ejs
@@ -1,5 +1,5 @@
-  <body class="container-fluid ">
-    <main class=" mx-2 ">
+  <body class="container-fluid " >
+    <main class=" mx-2 " data-aos="fade-in">
         <div >
           <div class="p-3 p-sm-5 my-4 rounded theme2 text-center">
             <h1>JetSaber</h1>
@@ -8,12 +8,12 @@
         
     </main>
       <br>
-    <div class="container justify-content-center text-center">
+    <div class="container justify-content-center text-center" data-aos="fade-in">
 
       <div class="movie-wrap"><iframe  width="426" height="240"  src="https://www.youtube.com/embed/zLQ5qq1oFO0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       
     </div>
-    <div class ="container pad50">
+    <div class ="container pad50" data-aos="fade-in">
       <p></p>
       <p></p>
       <p>二年生二回目のチーム制作で制作したアクションゲームです。</p>
