--- a/views/pages/game_magurossy.ejs
+++ b/views/pages/game_magurossy.ejs
@@ -1,5 +1,5 @@
-  <body class="container-fluid ">
-    <main class=" mx-2 ">
+  <body class="container-fluid " >
+    <main class=" mx-2 "  data-aos="fade-in">
         <div >
           <div class="p-3 p-sm-5 my-4 rounded theme2 text-center">
             <h1>マグロッシーロード</h1>
@@ -8,14 +8,14 @@
         
     </main>
       <br>
-    <div class="container justify-content-center text-center">
+    <div class="container justify-content-center text-center"  data-aos="fade-in">
 
       <div class="container justify-content-center text-center">
 
         <div class="movie-wrap"><iframe   width="426" height="240"  src="https://www.youtube.com/embed/7YXdXzGTqcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         
       </div></div>
-    <div class ="container pad50">
+    <div class ="container pad50"  data-aos="fade-in">
       <p></p>
       <p></p>
       <p>二年生一回目のチーム制作で制作したクロッシーロードのコピーです。</p>
