--- a/views/pages/tool_3DtoDot.ejs
+++ b/views/pages/tool_3DtoDot.ejs
@@ -1,4 +1,4 @@
-<script src="../source/index_3DToDotTool.js"></script>
+<script src="../img/index_3DToDotTool.js"></script>
 <body class="container-fluid " >
     <main class=" mx-2 " data-aos="fade-in">
         <div >
