add outkine 3Dmodel

--- a/views/pages/tool_3DtoDot.ejs
+++ b/views/pages/tool_3DtoDot.ejs
@@ -10,7 +10,8 @@
     </main>
       <br>
     <div class="container justify-content-center text-center" data-aos="fade-in">
-        <canvas id="myCanvas"></canvas>
+        <canvas id="myCanvas"></canvas><br>
+        <input type="range" id="outlineOffset">
     </div>
     <div class ="container pad50" data-aos="fade-in">
       <p></p>
