--- a/views/pages/tool_3DtoDot.ejs
+++ b/views/pages/tool_3DtoDot.ejs
@@ -3,7 +3,7 @@
     <main class=" mx-2 " data-aos="fade-in">
         <div >
           <div class="p-3 p-sm-5 my-4 rounded theme2 text-center">
-            <h1>3Dモデルをドット絵にするツール</h1>
+            <h1>3Dモデルをドット絵にする</h1>
           </div>
         </div>
         
@@ -11,11 +11,21 @@
       <br>
     <div class="container justify-content-center text-center" data-aos="fade-in">
         <canvas id="myCanvas"></canvas><br>
-        <input type="range" id="outlineOffset">
+        OutLineSize:<input type="range" id="outlineOffset">
+        OutLineColor: <input type="color" id="outlineColor">
+        <br>
+        <input type="button" value="DownLoad canvas" id="dwonloadButton">
+
     </div>
     <div class ="container pad50" data-aos="fade-in">
       <p></p>
       <p></p>
-      <p>そのまんまです。</p>
+      <p>three.jsの練習がてら作りました。<br>
+      左クリックでカメラ上下左右移動、右クリックでカメラ回転、ホイールでカメラ前後移動。<br>
+      キャラクターは<a href="https://twitter.com/keiichiisozaki">この方</a>が<a href="https://twitter.com/keiichiisozaki">こちら</a>で配布されているものです。</a></p>
+
+      ホントはユーザーがgltf及びfbxファイルの3Dモデルを自由にドット絵風に変換、コマ送りでモーションを進めて描画結果をダウンロードできるツールを作る予定でした。<br>
+      ただ、ユーザーのローカル上にあるファイルはjavascriptの都合上(テクスチャ等の)依存関係を追えないことが判って断念、こんな形での公開になりました。<br>
+      実現させるには一旦ユーザーのファイルをサーバーにアップロードして、それを読み込む形になるのでしょう。<br>
     </div>
   </body>
