--- a/views/pages/tool_3DtoDot.ejs
+++ b/views/pages/tool_3DtoDot.ejs
@@ -18,14 +18,12 @@
 
     </div>
     <div class ="container pad50" data-aos="fade-in">
-      <p></p>
-      <p></p>
       <p>three.jsの練習がてら作りました。<br>
       左クリックでカメラ上下左右移動、右クリックでカメラ回転、ホイールでカメラ前後移動。<br>
       キャラクターは<a href="https://twitter.com/keiichiisozaki">この方</a>が<a href="https://twitter.com/keiichiisozaki">こちら</a>で配布されているものです。</a></p>
 
       ホントはユーザーがgltf及びfbxファイルの3Dモデルを自由にドット絵風に変換、コマ送りでモーションを進めて描画結果をダウンロードできるツールを作る予定でした。<br>
       ただ、ユーザーのローカル上にあるファイルはjavascriptの都合上(テクスチャ等の)依存関係を追えないことが判って断念、こんな形での公開になりました。<br>
-      実現させるには一旦ユーザーのファイルをサーバーにアップロードして、それを読み込む形になるのでしょう。<br>
+      実現させるには一旦ユーザーのファイルをサーバーにアップロードして、それを読み込む形になるのでしょう。めんど！！！！！！！！<br>
     </div>
   </body>
