--- a/views/pages/tech_live2DwithGLSL.ejs
+++ b/views/pages/tech_live2DwithGLSL.ejs
@@ -14,9 +14,7 @@
   const float Pi = 3.14159;
   
   const int   complexity      = 47;    // More points of color.
-  const float mouse_factor    = 506.0;  // Makes it more/less jumpy.
-  const float mouse_offset    = 1000.0;   // Drives complexity in the amount of curls/cuves.  Zero is a single whirlpool.
-  const float fluid_speed     = 108.0;  // Drives speed, higher number will make it slower.
+  const float fluid_speed     = 200.0;  // Drives speed, higher number will make it slower.
   const float color_intensity = 0.8;
     
   
@@ -26,8 +24,8 @@
     for(int i=1;i<complexity;i++)
     {
       vec2 newp=p + u_time*0.001;
-      newp.x+=0.6/float(i)*sin(float(i)*p.y+u_time/fluid_speed+0.3*float(i)) + 0.5; // + u_mousePos.y/mouse_factor+mouse_offset;
-      newp.y+=0.6/float(i)*sin(float(i)*p.x+u_time/fluid_speed+0.3*float(i+10)) - 0.5; // - u_mousePos.x/mouse_factor+mouse_offset;
+      newp.x+=0.6/float(i)*sin(float(i)*p.y+u_time/fluid_speed+0.3*float(i)) + 0.5; 
+      newp.y+=0.6/float(i)*sin(float(i)*p.x+u_time/fluid_speed+0.3*float(i+10)) - 0.5; 
       p=newp;
     }
     vec3 col=vec3(color_intensity*sin(3.0*p.x)+color_intensity,color_intensity*sin(3.0*p.y)+color_intensity,color_intensity*sin(p.x+p.y)+color_intensity);
