--- a/views/pages/game_magurossy.ejs
+++ b/views/pages/game_magurossy.ejs
@@ -1,4 +1,5 @@
 <%- include( '../templates/headInclude',{absPath:"pages/games/index"}) %>
+<%- include("../templates/navBar",null) %>
   <body class="container-fluid " >
     <main class=" mx-2 "  data-aos="fade-in">
         <div >
@@ -23,6 +24,7 @@
       PL二人と私の三人のチームでしたが、企画が決まらなすぎて先生にコピー作りなと言われてこうなりました。<br>
       WebGL2とTypeScriptでゲーム部分を、expressとPostgresqlでサーバー部分を作りました。<br>
       初めて作ったブラウザゲームです。<br>
-      <a href="https://ultimate-daruma-selfy.herokuapp.com/game"　 target="_blank">ここから遊べます。</a>
+      サービス終了しました。
     </div>
   </body>
+  <%- include("../templates/footer",{right:"© 2021 Buti_PG"}) %>
