--- a/views/pages/shaders/julia.ejs
+++ b/views/pages/shaders/julia.ejs
@@ -1,5 +1,6 @@
 
 <%- include( '../templates/headInclude',{absPath:"pages/techs/shaders/shader"}) %>
+<%- include("../templates/navBar",null) %>
 <!-- fragment shader --><script id="fs" type="x-shader/x-fragment">
     precision mediump float;
     uniform float time;
@@ -63,3 +64,5 @@
         <p>GLSLのテスト</p>
       </div>
     </body>
+    
+<%- include("../templates/footer",{right:"© 2021 Buti_PG"}) %>
