--- a/views/pages/shaders/noise.ejs
+++ b/views/pages/shaders/noise.ejs
@@ -1,5 +1,6 @@
 
 <%- include( '../templates/headInclude',{absPath:"pages/techs/shaders/shader"}) %>
+<%- include("../templates/navBar",null) %>
 <!-- fragment shader --><script id="fs" type="x-shader/x-fragment">
     precision mediump float;
     uniform float time;
@@ -98,3 +99,4 @@ void main(void){
         <p>GLSLのテスト</p>
       </div>
     </body>
+    <%- include("../templates/footer",{right:"© 2021 Buti_PG"}) %>
