--- a/views/pages/choose.ejs
+++ b/views/pages/choose.ejs
@@ -1,23 +1,50 @@
-<%- include( '../templates/headInclude',{absPath:"pages/games/index"}) %>
-  <body class="container-fluid " >
-    <main class=" mx-2 " data-aos="fade-in">
-        <div >
-          <div class="p-3 p-sm-5 my-4 rounded theme2 text-center">
-            <h1>チューズ</h1>
+<%- include( "../templates/headInclude",{absPath:"pages/games/index"}) %>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<body class="container-fluid  bg_choose_basic px-0" >
+  <script>AOS.init();</script>
+    <main class="  " data-aos="fade-in">
+      <div class=" p-sm-5  bg_choose_ground_rev">
+      </div>
+      <div class="  bg_choose_copy">
+        <img src="../img/Choose/Choose_top.png"  class="img-fluid" >
+        <h1 class=" p-sm-5 choose_copy text-center">回転、解決、快感。</h1>
+        <img src="../img/Choose/Choose_bottom.png"  class="img-fluid" >
+      </div>
+      <div class=" p-sm-5 bg_choose_ground">
+      </div>
+    </main>
+    <div class ="container-fluid  bg_choose_basic" data-aos="fade-in">
+      <div class ="px-5 py-5 fs-4"><p class ="px-5 ">天地が地続きになった世界でお供え物を回収するゲーム。<br>
+      空高く流れる雲を踏みしめ、歩いてきたはずの大地を見上げる。<br>
+      摩訶不思議なメビウスの世界では、自身の閃きだけが頼りになる。</p>
+    </div>
+    
+      <div class="container-fluid py-3 ">
+        <div class="row justify-content-lg-center">
+          <div class="col col-sm-5">
+            <img src="../img/Choose/screenshot_00.png"  class="img-fluid border border-primary border-4 " >
+          </div>
+          <div class="col-md-auto">
+          </div>
+          <div class="col col-sm-5">
+            <img src="../img/Choose/screenshot_02.png"  class="img-fluid border border-primary border-4 " >
           </div>
         </div>
-        
-    </main>
-      <br>
-    <div class="container justify-content-center text-center" data-aos="fade-in">
-
-      <div class="container justify-content-center text-center">
-
-        
-        
+        <div class="row justify-content-md-center"">  <div class="col-md-auto">　</div> </div>
+        <div class="row justify-content-lg-center"">
+          <div class="col col-sm-5">
+            <img src="../img/Choose/screenshot_07.png"  class="img-fluid border border-primary border-4 " > 
+          </div>
+          <div class="col-md-auto">
+          </div>
+          <div class="col col-sm-5">
+            <img src="../img/Choose/screenshot_06.png"  class="img-fluid border border-primary border-4 " >
+          </div>
+        </div>
       </div>
+
     </div>
-    <div class ="container pad50" data-aos="fade-in">
-      <p>チューズのページ</p>
-    </div>
-  </body>
+</body>
+
+<%- include("../templates/footer",{right:"@ 2021 CTM"}) %>
