--- a/views/pages/game_find.ejs
+++ b/views/pages/game_find.ejs
@@ -1,25 +1,21 @@
 <%- include( '../templates/headInclude',{absPath:"pages/games/index"}) %>
+<%- include("../templates/navBar",null) %>
   <body class="container-fluid " >
     <main class=" mx-2 " data-aos="fade-in">
-        <div >
-          <div class="p-3 p-sm-5 my-4 rounded theme2 text-center">
-            <h1>Find</h1>
-          </div>
+      <div >
+        <div class="p-3 p-sm-5 my-4 rounded theme2 text-center">
+          <h1>Find</h1>
         </div>
-        
-    </main>
-      <br>
-    <div class="container justify-content-center text-center" data-aos="fade-in">
-
-      <div class="container justify-content-center text-center">
-
-        <div class="movie-wrap"></div><iframe   width="426" height="240"  src="https://www.youtube.com/embed/GZM5AEMrbn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-        
       </div>
-    </div>
+      
+  </main>
+    <br>
+  <div class="container justify-content-center text-center" data-aos="fade-in">
+
+    <div class="movie-wrap"><iframe  width="426" height="240"  src="https://www.youtube.com/embed/GZM5AEMrbn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    
+  </div>
     <div class ="container pad50" data-aos="fade-in">
-      <p></p>
-      <p></p>
       <p>二年生三回目のチーム制作で制作したパズルゲームです。</p>
       PL一人とPG一人と私の三人のチーム。<br>
       私はゲームエンジン部分とステージエディタ、シェーダによる見た目作りを担当しました。<br>
@@ -28,3 +24,4 @@
       PG:<a href="https://twitter.com/mendelic_y" target="_brank">@mendelic_y</a></p>
     </div>
   </body>
+  <%- include("../templates/footer",{right:"© 2021 Buti_PG"}) %>
