--- a/views/pages/game_jetSaber.ejs
+++ b/views/pages/game_jetSaber.ejs
@@ -1,4 +1,5 @@
 <%- include( '../templates/headInclude',{absPath:"pages/games/index"}) %>
+<%- include("../templates/navBar",null) %>
   <body class="container-fluid " >
     <main class=" mx-2 " data-aos="fade-in">
         <div >
@@ -22,3 +23,4 @@
       DirectX12とc++で制作しました。<br>
     </div>
   </body>
+  <%- include("../templates/footer",{right:"© 2021 Buti_PG"}) %>
