--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,5 @@
 <%- include( '../templates/headInclude',{absPath:"pages/index"}) %>
+<%- include("../templates/navBar",null) %>
 <body class="container-fluid " >
   <main class="text-center">
 <div class="pad5 transition-enabled" >
@@ -99,3 +100,4 @@
   </div>
 </main>
 </body>
+<%- include("../templates/footer",{right:"© 2021 Buti_PG"}) %>
