--- a/views/pages/tech_3DtoDot.ejs
+++ b/views/pages/tech_3DtoDot.ejs
@@ -1,4 +1,5 @@
 <%- include( '../templates/headInclude',{absPath:"pages/techs/3DtoDot"}) %>
+<%- include("../templates/navBar",null) %>
 <script src="../../source/index_3DtoDotTool.js"></script>
 <body class="container-fluid " >
     <main class=" mx-2 " data-aos="fade-in">
@@ -28,3 +29,4 @@
       実現させるには一旦ユーザーのファイルをサーバーにアップロードして、それを読み込む形になるのでしょう。めんど！！！！！！！！<br>
     </div>
   </body>
+  <%- include("../templates/footer",{right:"© 2021 Buti_PG"}) %>
