--- a/views/pages/tech_dx12Engine.ejs
+++ b/views/pages/tech_dx12Engine.ejs
@@ -1,4 +1,5 @@
 <%- include( '../templates/headInclude',{absPath:"pages/techs/engine"}) %>
+<%- include("../templates/navBar",null) %>
 <body class="container-fluid " >
     <main class=" mx-2 " data-aos="fade-in">
         <div >
@@ -82,3 +83,4 @@
     
     </div>
   </body>
+  <%- include("../templates/footer",{right:"© 2021 Buti_PG"}) %>
