--- a/views/pages/techs.ejs
+++ b/views/pages/techs.ejs
@@ -1,4 +1,5 @@
 <%- include( '../templates/headInclude',{absPath:"pages/techs/index"}) %>
+<%- include("../templates/navBar",null) %>
 <body class="container-fluid " >
     <main class="text-center"  data-aos="fade-in">
         <h1>-Techs-</h1>
@@ -34,3 +35,4 @@
     
 </main>
   </body>
+  <%- include("../templates/footer",{right:"© 2021 Buti_PG"}) %>
