add close sound

--- a/views/pages/jam_Left.ejs
+++ b/views/pages/jam_Left.ejs
@@ -16,8 +16,8 @@
 
     </div>
     <div class ="container pad50" data-aos="fade-in">
-      <p>10!!!!days!!!jam!!!!<br>
+      <p><a href="https://pocket-se.info/">ポケットサウンド/効果音素材</a></p>
+      <p><a href="https://www.senses-circuit.com/">SE : On-Jin ～音人～</a></p>
         
     </div>
   </body>
-  <%- include("../templates/footer",{right:"SE : On-Jin ～音人～ at https://www.senses-circuit.com/"}) %>
