--- a/views/pages/jam_Left.ejs
+++ b/views/pages/jam_Left.ejs
@@ -1,6 +1,8 @@
 <%- include( '../templates/headInclude',{absPath:"pages/techs/3DtoDot"}) %>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="../../source/index_10DaysJam.js"></script>
 <body class="container-fluid " >
+  <script>AOS.init();</script>
     <main class=" mx-2 " data-aos="fade-in">
         <div >
           <div class="p-3 p-sm-5 my-4 rounded theme2 text-center">
