--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <a href="/games/game_magurossy/"><img src="../img/magurossyRoad.png"  class="d-block w-100" alt="maguro"></a>
+          <a href="/games/game_choose/"><img src="../img/Choose/screenshot_00.png"  class="d-block w-100" alt="choose"></a>
         </div>
         <div class="carousel-item">
           <a href="/games/game_jetSaber/"><img src="../img/JetSaber.png"  class="d-block w-100" alt="jetsaber"></a>
@@ -65,38 +65,6 @@
       </a>
     </div>
   </div>
-  </div>
-  <div data-aos="fade-in">
-  <div class ="mt-5">  <a href="https://note.com/buti_programer/m/m2fcf520a63b6" class="text-dark"><h1>-note-</h1></a> </div>
-  <div class="container pad5">
-        
-    <div id="carousel" class="carousel slide col-sm " data-bs-ride="carousel" interval="2000" mx-300>
-      <ol class="carousel-indicators">
-        <li data-bs-target="#carousel" data-bs-slide-to="0" class="active"></li>
-        <li data-bs-target="#carousel" data-bs-slide-to="1"></li>
-        <li data-bs-target="#carousel" data-bs-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <iframe class="note-embed " frameborder="no" scrolling="no" src="https://note.com/embed/notes/n03be43160687"  ></iframe>
-        </div>
-        <div class="carousel-item">
-          <iframe class="note-embed " frameborder="no" scrolling="no" src="https://note.com/embed/notes/n1076bcbdeca1"  ></iframe>
-        </div>
-        <div class="carousel-item">
-          <iframe class="note-embed " frameborder="no" scrolling="no" src="https://note.com/embed/notes/nf14839a59537"  ></iframe>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carousel" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carousel" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </a>
-    </div>
-    </div>
   </div>
 </main>
 </body>
